--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -1,9 +1,26 @@
 '-1': 'null'
-'0':
-- rowcurl
-'1': 'null'
+'0': 'null'
+'1':
+- rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_http
+- rowcurl*curl_fuzzer_imap
+- rowcurl*curl_fuzzer_gopher
+- rowcurl*curl_fuzzer
+- rowcurl*curl_fuzzer_rtmp
+- rowcurl*curl_fuzzer_scp
+- rowcurl*curl_fuzzer_file
+- rowcurl*curl_fuzzer_ldap
+- rowcurl*curl_fuzzer_tftp
+- rowcurl*curl_fuzzer_https
+- rowcurl*curl_fuzzer_rtsp
+- rowcurl*curl_fuzzer_dict
+- rowcurl*curl_fuzzer_smtp
+- rowcurl*curl_fuzzer_smb
+- rowcurl*curl_fuzzer_ftp
+- rowcurl*curl_fuzzer_pop3
 '2': 'null'
 '3': 'null'
 '4': 'null'
 '5': 'null'
-'6': 'null'
+'6':
+- rowcurl
