--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -2,8 +2,7 @@
 '0': 'null'
 '1': 'null'
 '2': 'null'
-'3':
-- rowcurl*curl_fuzzer_pop3
+'3': 'null'
 '4':
 - rowcurl*curl_fuzzer_sftp
 - rowcurl*curl_fuzzer_http
@@ -21,6 +20,7 @@
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_ftp
+- rowcurl*curl_fuzzer_pop3
 '5': 'null'
 '6':
 - rowcurl
