--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -1,7 +1,6 @@
 '-1': 'null'
 '0': 'null'
-'1':
-- rowcurl*curl_fuzzer_ftp
+'1': 'null'
 '2':
 - rowcurl*curl_fuzzer_imap
 - rowcurl*curl_fuzzer_ldap
@@ -19,6 +18,7 @@
 - rowcurl*curl_fuzzer_http
 - rowcurl*curl_fuzzer_dict
 - rowcurl*curl_fuzzer_tftp
+- rowcurl*curl_fuzzer_ftp
 '3': 'null'
 '4': 'null'
 '5': 'null'
