write result long works

--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -3,8 +3,7 @@
 '0': 'null'
 '1': 'null'
 '2': 'null'
-'3':
-- rowcurl*curl_fuzzer_ftp
+'3': 'null'
 '4':
 - rowcurl*curl_fuzzer_gopher
 - rowcurl*curl_fuzzer_pop3
@@ -21,6 +20,7 @@
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_ftp
 '5': 'null'
 '6':
 - rowcurl
