--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -17,10 +17,10 @@
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_ftp
 '2': 'null'
 '3': 'null'
 '4': 'null'
-'5':
-- rowcurl*curl_fuzzer_ftp
+'5': 'null'
 '6':
 - rowcurl
