--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -4,8 +4,7 @@
 '0': 'null'
 '1': 'null'
 '2': 'null'
-'3':
-- rowcurl*curl_fuzzer_file
+'3': 'null'
 '4':
 - rowcurl*curl_fuzzer_rtsp
 - rowcurl*curl_fuzzer_ldap
@@ -22,6 +21,7 @@
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_https
 - rowcurl*curl_fuzzer_pop3
+- rowcurl*curl_fuzzer_file
 '5': 'null'
 '6':
 - rowcurl
