--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -18,10 +18,10 @@
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_https
 - rowcurl*curl_fuzzer_pop3
+- rowcurl*curl_fuzzer_file
 '2': 'null'
 '3': 'null'
 '4': 'null'
-'5':
-- rowcurl*curl_fuzzer_file
+'5': 'null'
 '6':
 - rowcurl
