--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -2,8 +2,7 @@
 - rowcurl*llvm-symbolizer
 '0': 'null'
 '1': 'null'
-'2':
-- rowcurl*curl_fuzzer_tftp
+'2': 'null'
 '3':
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_pop3
@@ -21,6 +20,7 @@
 - rowcurl*curl_fuzzer_file
 - rowcurl*curl_fuzzer_scp
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_tftp
 '4': 'null'
 '5': 'null'
 '6':
