--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -3,8 +3,7 @@
 '0': 'null'
 '1': 'null'
 '2': 'null'
-'3':
-- rowcurl*curl_fuzzer_tftp
+'3': 'null'
 '4':
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_pop3
@@ -22,6 +21,7 @@
 - rowcurl*curl_fuzzer_file
 - rowcurl*curl_fuzzer_scp
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_tftp
 '5': 'null'
 '6':
 - rowcurl
