--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -4,8 +4,7 @@
 '1': 'null'
 '2': 'null'
 '3': 'null'
-'4':
-- rowcurl*curl_fuzzer_tftp
+'4': 'null'
 '5':
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_pop3
@@ -23,5 +22,6 @@
 - rowcurl*curl_fuzzer_file
 - rowcurl*curl_fuzzer_scp
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_tftp
 '6':
 - rowcurl
