--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -4,8 +4,7 @@
 - rowcurl*curl_fuzzer_scp
 - rowcurl*curl_fuzzer_rtsp
 '0': 'null'
-'1':
-- rowcurl*curl_fuzzer_smb
+'1': 'null'
 '2':
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_rtmp
@@ -20,6 +19,7 @@
 - rowcurl*curl_fuzzer_file
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_ftp
+- rowcurl*curl_fuzzer_smb
 '3': 'null'
 '4': 'null'
 '5': 'null'
