--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -5,8 +5,7 @@
 - rowcurl*curl_fuzzer_rtsp
 '0': 'null'
 '1': 'null'
-'2':
-- rowcurl*curl_fuzzer_smb
+'2': 'null'
 '3':
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_rtmp
@@ -21,6 +20,7 @@
 - rowcurl*curl_fuzzer_file
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_ftp
+- rowcurl*curl_fuzzer_smb
 '4': 'null'
 '5': 'null'
 '6':
