--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -6,8 +6,7 @@
 '0': 'null'
 '1': 'null'
 '2': 'null'
-'3':
-- rowcurl*curl_fuzzer_smb
+'3': 'null'
 '4':
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_rtmp
@@ -22,6 +21,7 @@
 - rowcurl*curl_fuzzer_file
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_ftp
+- rowcurl*curl_fuzzer_smb
 '5': 'null'
 '6':
 - rowcurl
