--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -7,8 +7,7 @@
 '1': 'null'
 '2': 'null'
 '3': 'null'
-'4':
-- rowcurl*curl_fuzzer_smb
+'4': 'null'
 '5':
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_rtmp
@@ -23,5 +22,6 @@
 - rowcurl*curl_fuzzer_file
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_ftp
+- rowcurl*curl_fuzzer_smb
 '6':
 - rowcurl
