--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -2,8 +2,7 @@
 - rowcurl*llvm-symbolizer
 '0': 'null'
 '1': 'null'
-'2':
-- rowcurl*curl_fuzzer_imap
+'2': 'null'
 '3':
 - rowcurl*curl_fuzzer_dict
 - rowcurl*curl_fuzzer_file
@@ -21,6 +20,7 @@
 - rowcurl*curl_fuzzer_https
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_gopher
+- rowcurl*curl_fuzzer_imap
 '4': 'null'
 '5': 'null'
 '6':
