--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -1,8 +1,7 @@
 '-1':
 - rowcurl*llvm-symbolizer
 '0': 'null'
-'1':
-- rowcurl*curl_fuzzer_http
+'1': 'null'
 '2':
 - rowcurl*curl_fuzzer_dict
 - rowcurl*curl_fuzzer_smtp
@@ -20,6 +19,7 @@
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_http
 '3': 'null'
 '4': 'null'
 '5': 'null'
