--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -2,8 +2,7 @@
 - rowcurl*llvm-symbolizer
 '0': 'null'
 '1': 'null'
-'2':
-- rowcurl*curl_fuzzer_http
+'2': 'null'
 '3':
 - rowcurl*curl_fuzzer_dict
 - rowcurl*curl_fuzzer_smtp
@@ -21,6 +20,7 @@
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_http
 '4': 'null'
 '5': 'null'
 '6':
