--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -3,8 +3,7 @@
 '0': 'null'
 '1': 'null'
 '2': 'null'
-'3':
-- rowcurl*curl_fuzzer_http
+'3': 'null'
 '4':
 - rowcurl*curl_fuzzer_dict
 - rowcurl*curl_fuzzer_smtp
@@ -22,6 +21,7 @@
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_http
 '5': 'null'
 '6':
 - rowcurl
