--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -18,10 +18,10 @@
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_sftp
+- rowcurl*curl_fuzzer_http
 '2': 'null'
 '3': 'null'
 '4': 'null'
-'5':
-- rowcurl*curl_fuzzer_http
+'5': 'null'
 '6':
 - rowcurl
