--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -1,8 +1,7 @@
 '-1':
 - rowcurl*llvm-symbolizer
 '0': 'null'
-'1':
-- rowcurl*curl_fuzzer_ftp
+'1': 'null'
 '2':
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_tftp
@@ -21,6 +20,7 @@
 - rowcurl*curl_fuzzer_gopher
 - rowcurl*curl_fuzzer_mqtt
 - rowcurl*curl_fuzzer_smtp
+- rowcurl*curl_fuzzer_ftp
 '3': 'null'
 '4': 'null'
 '5': 'null'
