--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -15,12 +15,12 @@
 - rowcurl*curl_fuzzer_gopher
 - rowcurl*curl_fuzzer_mqtt
 '0': 'null'
-'1':
-- rowcurl*curl_fuzzer_ftp
+'1': 'null'
 '2':
 - rowcurl*curl_fuzzer_imap
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_smtp
+- rowcurl*curl_fuzzer_ftp
 '3': 'null'
 '4': 'null'
 '5': 'null'
