--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -16,12 +16,12 @@
 - rowcurl*curl_fuzzer_mqtt
 '0': 'null'
 '1': 'null'
-'2':
-- rowcurl*curl_fuzzer_ftp
+'2': 'null'
 '3':
 - rowcurl*curl_fuzzer_imap
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_smtp
+- rowcurl*curl_fuzzer_ftp
 '4': 'null'
 '5': 'null'
 '6':
