--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -17,12 +17,12 @@
 '0': 'null'
 '1': 'null'
 '2': 'null'
-'3':
-- rowcurl*curl_fuzzer_ftp
+'3': 'null'
 '4':
 - rowcurl*curl_fuzzer_imap
 - rowcurl*curl_fuzzer
 - rowcurl*curl_fuzzer_smtp
+- rowcurl*curl_fuzzer_ftp
 '5': 'null'
 '6':
 - rowcurl
