--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -2,8 +2,7 @@
 - rowcurl*llvm-symbolizer
 '0': 'null'
 '1': 'null'
-'2':
-- rowcurl*curl_fuzzer_tftp
+'2': 'null'
 '3':
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_rtsp
@@ -22,6 +21,7 @@
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_ftp
 - rowcurl*curl_fuzzer_imap
+- rowcurl*curl_fuzzer_tftp
 '4': 'null'
 '5': 'null'
 '6':
