--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -3,8 +3,7 @@
 '0': 'null'
 '1': 'null'
 '2': 'null'
-'3':
-- rowcurl*curl_fuzzer_tftp
+'3': 'null'
 '4':
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_rtsp
@@ -23,6 +22,7 @@
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_ftp
 - rowcurl*curl_fuzzer_imap
+- rowcurl*curl_fuzzer_tftp
 '5': 'null'
 '6':
 - rowcurl
