write result long works

--- a/in/work_list.yml
+++ b/in/work_list.yml
@@ -4,8 +4,7 @@
 '1': 'null'
 '2': 'null'
 '3': 'null'
-'4':
-- rowcurl*curl_fuzzer_tftp
+'4': 'null'
 '5':
 - rowcurl*curl_fuzzer_smtp
 - rowcurl*curl_fuzzer_rtsp
@@ -24,5 +23,6 @@
 - rowcurl*curl_fuzzer_smb
 - rowcurl*curl_fuzzer_ftp
 - rowcurl*curl_fuzzer_imap
+- rowcurl*curl_fuzzer_tftp
 '6':
 - rowcurl
